--- a/src/assets/sass/layout/_sidebar.scss
+++ b/src/assets/sass/layout/_sidebar.scss
@@ -4,7 +4,7 @@
   padding: 3rem;
   width: 22rem;
   overflow-y: hidden;
-  background-color: #db1d40;
+  background-color: var(--color-primary);
   display: flex;
   flex-direction: column;
 
