cambios en nuevos componentes

--- a/src/assets/sass/layout/_main.scss
+++ b/src/assets/sass/layout/_main.scss
@@ -4,3 +4,12 @@
   font-size: 1.6rem;
   line-height: 1.6;
 }
+
+h1.titulo_home {
+  margin-top: 20px;
+  margin-left: 7px;
+  margin-bottom: 0px;
+  font-weight: 400;
+  text-transform: capitalize;
+  font-size: 26px;
+}
