algunos fixs y agregados

--- a/src/assets/sass/layout/_main.scss
+++ b/src/assets/sass/layout/_main.scss
@@ -9,11 +9,20 @@
   overflow: hidden;
 }
 
-h1.titulo_home {
+h1.titulo_home{
   margin-top: 20px;
   margin-left: 7px;
   margin-bottom: 0px;
   font-weight: 400;
   text-transform: capitalize;
   font-size: 26px;
+}
+
+h3.no_favoritos {
+  margin-top: 20px;
+  margin-left: 7px;
+  margin-bottom: 0px;
+  font-weight: 400;
+  text-transform: capitalize;
+  font-size: 12px;
 }
