--- a/src/assets/sass/layout/_sidebar.scss
+++ b/src/assets/sass/layout/_sidebar.scss
@@ -1,7 +1,7 @@
 .sidebar {
   --nav-text-color: #333;
 
-  box-shadow: 0 1px 10px rgba(var(--nav-text-color), 1);
+  box-shadow: 0 1px 10px rgba(#333, 0.1);
 
   padding: 10rem 3rem;
   overflow-y: hidden;
