--- a/src/assets/sass/layout/_sidebar.scss
+++ b/src/assets/sass/layout/_sidebar.scss
@@ -56,6 +56,7 @@
     margin: 0.5rem 0;
     color: var(--nav-text-color);
     min-width: 50%;
+    transition: all 0.2s;
 
     &--active,
     &:hover {
