Add border-radius variable and reduce sidebar width

--- a/src/assets/sass/layout/_sidebar.scss
+++ b/src/assets/sass/layout/_sidebar.scss
@@ -34,14 +34,11 @@
   }
 
   &-nav {
-    width: 100%;
     display: flex;
     list-style: none;
     font-size: 2rem;
     flex-direction: column;
     margin-bottom: 4rem;
-    width: 70%;
-    align-self: flex-end;
   }
 
   &-item {
@@ -57,7 +54,7 @@
     color: var(--nav-text-color);
     min-width: 50%;
     transition: all 0.2s;
-    border-radius: 3px;
+    border-radius: var(--border-radius);
     outline: none;
 
     &--active,
