Improve login functionality and add some styling

--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -9,9 +9,11 @@
 :root {
   --color-primary: #ffffff;
   --color-primary-dark: #b81432;
+  --color-gray: #ddd;
+
   --font-weight-md: 500;
   --font-weight-bold: 600;
-  --border-radius: 3px;
+  --border-radius: 2px;
 }
 
 html {
