--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -2,4 +2,8 @@
 
 @import 'layout/main';
 @import 'layout/sidebar';
-@import 'layout/music-player'
+@import 'layout/music-player';
+@import 'layout/login';
+
+@import 'components/input';
+@import 'components/button';
