Move _login.scss to pages/ and create _home.scss

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -3,7 +3,9 @@
 @import 'layout/main';
 @import 'layout/sidebar';
 @import 'layout/music-player';
-@import 'layout/login';
+
+@import 'pages/login';
+@import 'pages/home';
 
 @import 'components/input';
 @import 'components/button';
