--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -9,11 +9,11 @@
 :root {
   --color-primary: #ffffff;
   --color-primary-dark: #b81432;
-  --color-gray: #ddd;
+  --color-gray: rgb(207, 207, 207);
 
   --font-weight-md: 500;
   --font-weight-bold: 600;
-  --border-radius: 2px;
+  --border-radius: 5px;
 }
 
 html {
