--- a/src/assets/sass/pages/_home.scss
+++ b/src/assets/sass/pages/_home.scss
@@ -1,10 +1,4 @@
-// .home {
-//   display: grid;
-//   width: 100%;
-//   height: 100%;
-//   font-size: 5rem;
-//   flex-direction: column;
-//   align-content: center;
-//   justify-items: center;
-//   gap: 5rem;
-// }
+.home {
+  padding: 2rem;
+  overflow: hidden;
+}
