--- a/src/assets/sass/layout/_sidebar.scss
+++ b/src/assets/sass/layout/_sidebar.scss
@@ -1,18 +1,16 @@
 .sidebar {
-  --nav-text-color: #333;
-
   box-shadow: 0 1px 10px rgba(#333, 0.1);
 
   padding: 10rem 3rem;
   overflow-y: hidden;
-  background-color: var(--color-primary);
+  background-color: var(--bgcolor-sidebar);
   display: flex;
   flex-direction: column;
   font-weight: var(--font-weight-bold);
 
   &-title,
   &-heading {
-    color: var(--nav-text-color);
+    color: var(--color-text);
     text-transform: uppercase;
     padding-bottom: 1rem;
   }
@@ -26,7 +24,7 @@
 
   &-heading {
     font-size: 1.5rem;
-    color: #777;
+    color: var(--color-gray-2);
   }
 
   &:hover {
@@ -51,7 +49,7 @@
     align-items: center;
     padding: 1rem;
     margin: 0.5rem 0;
-    color: var(--nav-text-color);
+    color: var(--color-text);
     min-width: 50%;
     transition: all 0.2s;
     border-radius: var(--border-radius);
@@ -60,8 +58,8 @@
     &--active,
     &:hover,
     &:focus {
-      --nav-text-color: #ba0f22;
-      background-color: #eec3c8;
+      --color-text: var(--color-primary);
+      background-color: var(--color-primary-bg);
     }
   }
 
@@ -69,7 +67,7 @@
     --icon-size: 2.2rem;
     width: var(--icon-size);
     height: var(--icon-size);
-    fill: var(--nav-text-color);
+    fill: var(--color-text);
     display: block;
     margin-right: 1.3rem;
   }
