Grid albums just 2 rows - changed desing scroll

--- a/src/assets/sass/pages/_home.scss
+++ b/src/assets/sass/pages/_home.scss
@@ -2,3 +2,9 @@
   padding: 2rem;
   overflow: hidden;
 }
+
+.albumsRecents {
+  display: grid;
+  grid-template-rows: repeat(2, 50%);
+  grid-auto-flow: column;
+}
