--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -6,6 +6,7 @@
 
 @import 'pages/login';
 @import 'pages/home';
+@import 'pages/artists';
 
 @import 'components/input';
 @import 'components/button';
