Add album component

--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -11,6 +11,7 @@
   --color-text-light: #fff;
 
   --color-gray: #cfcfcf;
+  --color-gray-1: #e7e7e7;
   --color-gray-2: #777;
   --color-primary: #ba0f22;
   --color-primary-bg: #eec3c8;
@@ -18,6 +19,7 @@
   --bgcolor-sidebar: #fff;
   --bgcolor-music-player: #fff;
 
+  --font-weight-sm: 400;
   --font-weight-md: 500;
   --font-weight-bold: 600;
   --border-radius: 5px;
