--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -7,6 +7,7 @@
 @import 'pages/login';
 @import 'pages/home';
 @import 'pages/artists';
+@import 'pages/album';
 
 @import 'components/input';
 @import 'components/button';
