--- a/src/assets/sass/pages/_album.scss
+++ b/src/assets/sass/pages/_album.scss
@@ -60,7 +60,7 @@
     display: flex;
     font-size: 1.9rem;
     color: var(--color-text);
-    padding: 1rem;
+    padding: 1.5rem 1rem;
     border-bottom: 1px solid var(--color-gray-1);
 
     &-title {
