Move sass to each component (#33)
* Move sass to each component

- Move all sass to each component
- Delete the sass folder
- Creation of Section component
- Creation of Input component

* Run linter

* Improve sass separation

--- a/src/containers/Artists/Artists.scss
+++ b/src/containers/Artists/Artists.scss
@@ -1,10 +1,5 @@
-.artists {
-  padding: 2rem;
-  overflow: hidden;
-}
-
 .generoArtistas {
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
 }
 
 // .albumsRecents {
