--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,5 +1,7 @@
 .button {
-  @extend .input;
+  padding: 1rem 2rem;
+  border-radius: var(--border-radius);
+  border: 1px solid var(--color-gray);
   cursor: pointer;
   border: none;
 
