--- a/src/components/AlbumInfo/AlbumInfo.scss
+++ b/src/components/AlbumInfo/AlbumInfo.scss
@@ -1,44 +1,37 @@
-.album-info-box {
-  margin: 3rem;
-
-  & > * {
-    margin-bottom: 1rem;
-  }
-}
-
-.album-img {
-  height: 25rem;
-}
-
-.album-heading {
-  font-weight: var(--font-weight-sm);
-  color: var(--color-gray-2);
-  text-transform: uppercase;
-}
-
-.album-title {
-  line-height: 1;
-  font-size: 4rem;
-  font-weight: var(--font-weight-bold);
-}
-
-.album-info2 {
-  color: var(--color-gray-2);
+.AlbumInfo {
   display: flex;
-  // justify-content: space-around;
-  --margin: 1rem;
+  margin: 1rem 0;
 
-  & > * {
-    margin-right: var(--margin);
+  &-image {
+    height: 25rem;
   }
 
-  & > *:not(:first-child)::before {
-    content: '-';
-    margin-right: var(--margin);
-  }
-}
+  &-box {
+    margin: 3rem;
 
-.album-button {
-  margin-top: 1rem;
-  font-size: 2rem;
+    & > * {
+      margin-bottom: 1rem;
+    }
+
+    &-heading {
+      font-weight: var(--font-weight-sm);
+      color: var(--color-gray-2);
+      text-transform: uppercase;
+    }
+
+    &-title {
+      line-height: 1;
+      font-size: 4rem;
+      font-weight: var(--font-weight-bold);
+    }
+
+    &-info2 {
+      color: var(--color-gray-2);
+    }
+
+    &-button {
+      margin-top: 1rem;
+      font-size: 2rem;
+    }
+  }
 }
