--- a/src/components/AlbumSong/AlbumSong.scss
+++ b/src/components/AlbumSong/AlbumSong.scss
@@ -1,13 +1,13 @@
-.album-song {
+.AlbumSong {
   display: flex;
   font-size: 1.9rem;
   color: var(--color-text);
   padding: 1.5rem 1rem;
   border-bottom: 1px solid var(--color-gray-1);
 
-  &-title {
-    margin-left: 3rem;
-    margin-right: auto;
+  &-heading {
+    font-weight: var(--font-weight-bold);
+    color: var(--color-gray-2);
   }
 
   &-index {
@@ -16,9 +16,9 @@
     text-align: center;
   }
 
-  &-heading {
-    font-weight: var(--font-weight-bold);
-    color: var(--color-gray-2);
+  &-title {
+    margin-left: 3rem;
+    margin-right: auto;
   }
 
   &-length {
