--- a/src/components/AlbumSongs/AlbumSongs.scss
+++ b/src/components/AlbumSongs/AlbumSongs.scss
@@ -1,6 +1,8 @@
-.album-songs-box {
-  margin-top: 2rem;
-  list-style: none;
-  display: flex;
-  flex-direction: column;
+.AlbumSongs {
+  &-box {
+    margin-top: 2rem;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+  }
 }
